--- a/gcm/gcm-web/.settings/org.eclipse.wst.common.component
+++ b/gcm/gcm-web/.settings/org.eclipse.wst.common.component
@@ -8,6 +8,9 @@
         <dependent-module archiveName="gcm-service-1.0.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/gcm-service/gcm-service">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="gcm-dao-1.0.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/gcm-dao/gcm-dao">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="gcm-web"/>
         <property name="java-output-path" value="/gcm-web/target/classes"/>
     </wb-module>
