--- a/gcm/gcm-web/.settings/org.eclipse.wst.common.component
+++ b/gcm/gcm-web/.settings/org.eclipse.wst.common.component
@@ -5,13 +5,13 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module archiveName="gcm-service-1.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/gcm-service/gcm-service">
+        <dependent-module archiveName="gcm-service-1.0.9-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/gcm-service/gcm-service">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="gcm-dao-1.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/gcm-dao/gcm-dao">
+        <dependent-module archiveName="gcm-dao-1.0.9-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/gcm-dao/gcm-dao">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="context-root" value="gcm-web"/>
         <property name="java-output-path" value="/gcm-web/target/classes"/>
+        <property name="context-root" value="gcm"/>
     </wb-module>
 </project-modules>
