--- a/gcm/gcm-web/.settings/org.eclipse.wst.common.component
+++ b/gcm/gcm-web/.settings/org.eclipse.wst.common.component
@@ -12,6 +12,6 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/gcm-web/target/classes"/>
-        <property name="context-root" value="gcm"/>
+        <property name="context-root" value="gcm-web"/>
     </wb-module>
 </project-modules>
